@@ -1,0 +1,55 @@
+//
+// 4000 Polish Channels.
+//
+
+minChan[4] = 4001;
+defChan[4] = 4001;
+baseChn[4] = 4000;
+protChn[4] = 0;
+maxChan[4] = 4050; // set to max channel else you see 'undefined' in guide view
+
+channelsnames[4001] = "TVN HD (S)";
+channels[4001] = "S13.0E-318-1600-15821";
+channelsnames[4002] = "TVN Siedem (S)";
+channels[4002] = "S13.0E-318-1000-4313";
+channelsnames[4003] = "TVN STYLE HD (S)";
+channels[4003] = "S13.0E-318-1600-15823";
+channelsnames[4004] = "TVN Turbo HD (S)";
+channels[4004] = "S13.0E-318-1600-15824";
+channelsnames[4005] = "TTV (S)";
+channels[4005] = "S13.0E-318-1000-4317";
+channelsnames[4006] = "TVN 24 HD (S)";
+channels[4006] = "S13.0E-318-1600-15826";
+channelsnames[4007] = "Polsat HD (S)";
+channels[4007] = "S13.0E-113-7800-3107";
+channelsnames[4011] = "TVP 1 HD (S)";
+channels[4011] = "S13.0E-318-1300-15037";
+channelsnames[4012] = "TVP 2 HD (S)";
+channels[4012] = "S13.0E-113-7800-3106";
+channelsnames[4013] = "TVP HD (S)";
+channels[4013] = "S13.0E-318-300-15202";
+channelsnames[4014] = "TVP Seriale (S)";
+channels[4014] = "S19.2E-1-1059-7108";
+channelsnames[4015] = "TVP INFO (S)";
+channels[4015] = "S19.2E-1-1059-7102";
+channelsnames[4016] = "TVP Kultura (S)";
+channels[4016] = "S19.2E-1-1059-7106";
+channelsnames[4017] = "TVP Polonia (S)";
+channels[4017] = "S19.2E-1-1059-7104";
+channelsnames[4018] = "TVP Historia (S)";
+channels[4018] = "S19.2E-1-1059-7105";
+channelsnames[4019] = "TV PULS (S)";
+channels[4019] = "S13.0E-318-1500-5112";
+channelsnames[4022] = "TVN CNBC (S)";
+channels[4022] = "S13.0E-318-1000-4322";
+channelsnames[4023] = "TVN Meteo (S)";
+channels[4023] = "S13.0E-318-1000-4318";
+channelsnames[4029] = "TVN 24 (S)";
+channels[4029] = "S13.0E-318-1000-4312";
+channelsnames[4048] = "Cinemax HD (S)";
+channels[4048] = "S13.0E-318-300-15207";
+channelsnames[4049] = "Cinemax 2 HD (S)";
+channels[4049] = "S13.0E-113-7800-3110";
+channelsnames[4050] = "HBO HD (S)";
+channels[4050] = "S13.0E-113-7800-3105";
+
